# template-lab-x-github-actions

./: .CMakeLists.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  area_calculator  cmake_install.cmake  rectangle  test
.github/workflows/: main.yml
header/: rectangle.hpp
src/: main.cpp  rectangle.cpp
tests/: test.cpp
